Fix spacing in contact details in footer

--- a/assets/src/less/footer.less
+++ b/assets/src/less/footer.less
@@ -45,6 +45,8 @@
 	}
 
 	.bp-contact-card {
+		margin: 0;
+		padding: 0;
 		background: transparent;
 		border: none;
 	}
